Fixed a horizontal scrolling bug

--- a/dev/_assets/scss/components/_mailing-list__sign-up.scss
+++ b/dev/_assets/scss/components/_mailing-list__sign-up.scss
@@ -1,5 +1,6 @@
 [class*='mailing-list__sign-up'] {
     min-height: 14em;
+    overflow: hidden;
     position: relative;
 }
 
